@@ -17,14 +17,14 @@ sys.path.append('tools/sphinxext')
 
 # General substitutions.
 project = 'PyBSDDB'
-copyright = '2008-2010 Jesus Cea Avion'
+copyright = '2008-2011 Jesus Cea Avion'
 
 # The default replacements for |version| and |release|.
 #
 # The short X.Y version.
 version = '5.1.2'
 # The full version, including alpha/beta/rc tags.
-release = '5.1.2devel1'
+release = '5.1.2devel2'
 
 # There are two options for replacing |today|: either, you set today to some
 # non-false value, then it is used:
